--- a/solar_app_html/static/index.html
+++ b/solar_app_html/static/index.html
@@ -218,6 +218,7 @@
     // Map
     const map = L.map("map").setView([center.lat, center.lon], 10);
     L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+      minZoom: 10,
       maxZoom: 19,
       attribution: "&copy; OpenStreetMap contributors"
     }).addTo(map);
